load("//bazel:api.bzl", "modular_py_library", "requirement")

modular_py_library(
    name = "graph",
    srcs = glob(["**/*.py"]),
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max/_graph",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/mlir",
        requirement("numpy"),
    ],
)
