load("//bazel:api.bzl", "modular_py_library", "pkg_files", "requirement", "strip_prefix")

modular_py_library(
    name = "nn",
    srcs = glob(["**/*.py"]),
    imports = ["../.."],
    deps = [
        requirement("numpy"),
        requirement("gguf"),
        requirement("msgspec"),
        requirement("rich"),
        requirement("transformers"),
        requirement("typing-extensions"),
        "//SDK/lib/API/python/max/_core_mojo",
        "//SDK/lib/API/python/max/dtype",
        "//SDK/lib/API/python/max/engine",
        "//SDK/lib/API/python/max/experimental",
        "//SDK/lib/API/python/max/graph",
        "//SDK/lib/API/python/max/pipelines/core",
        "//SDK/lib/API/python/max/serve/kvcache_agent",
        "//SDK/lib/API/python/max/support",
    ],
)

pkg_files(
    name = "python_files",
    srcs = glob([
        "**/*.py",
    ]),
    prefix = "nn",
    strip_prefix = strip_prefix.from_pkg(""),
    visibility = ["//visibility:public"],
)
