load("//bazel:api.bzl", "modular_py_library", "requirement")

package(default_visibility = ["//visibility:public"])

modular_py_library(
    name = "pipelines",
    srcs = [
        "__init__.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//SDK/lib/API/python/max/pipelines/architectures",
        "//SDK/lib/API/python/max/pipelines/lib",
        requirement("gguf"),
        requirement("hf-transfer"),
        requirement("huggingface-hub"),
        requirement("jinja2"),
        requirement("numpy"),
        requirement("pillow"),
        requirement("transformers"),
    ],
)
