load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")

pkg_files(
    name = "docs",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "README.md",
            "BUILD.bazel",
            "post-process-docs.py",
        ],
    ),
    prefix = "mojo",
    renames = {
        "changelog.md": "_nightly-changelog.md",
        "changelog-released.md": "changelog.md",
    },
    strip_prefix = strip_prefix.from_pkg(""),
    visibility = ["//visibility:public"],
)
