load("//bazel:api.bzl", "lit_tests")

lit_tests(
    name = "lit",  # NOTE: Name must stay as this to load lit.local.cfg
    size = "large",
    srcs = glob([
        "python-extension-modules/**/*.py",
    ]),
    data = glob(["**/*.mojo"]) + [
        "//KGEN:CompilerRT",
    ],
    generate_litcfg = False,
    mojo_deps = [
        "//open-source/mojo/stdlib/stdlib",
    ],
    tags = [],
    target_compatible_with = select({
        "//:asan": ["@platforms//:incompatible"],
        "//:tsan": ["@platforms//:incompatible"],
        "//:ubsan": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    tools = [
        "//KGEN/tools/kgen",
        "//KGEN/tools/kgen-translate",
        "//KGEN/tools/mojo",
    ],
    deps = [
        # Adds path/to/mojo-pybind/.. to the PYTHONPATH so we can invoke it as:
        #   RUN: python3 -m mojo-pybind.main
        "//KGEN/MojoBindings/mojo-pybind",
    ],
)
